--- a/single_stage_detector/Dockerfile
+++ b/single_stage_detector/Dockerfile
@@ -16,6 +16,13 @@ ARG FROM_IMAGE_NAME=pytorch/pytorch:1.10.0-cuda11.3-cudnn8-devel
 # ARG FROM_IMAGE_NAME=nvcr.io/nvidia/pytorch:22.01-py3
 FROM ${FROM_IMAGE_NAME}
 
+RUN rm /etc/apt/sources.list.d/cuda.list
+RUN rm /etc/apt/sources.list.d/nvidia-ml.list
+RUN apt-key del 7fa2af80
+RUN apt-get update && apt-get install -y --no-install-recommends wget
+RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/cuda-keyring_1.0-1_all.deb
+RUN dpkg -i cuda-keyring_1.0-1_all.deb
+
 # Make sure git is installed (needed by pip)
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
